--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
 <body>
 	<h1>Заголовок</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore tempora laborum, beatae nisi maxime molestiae ad inventore magni sunt excepturi fugiat repellat aliquam, sequi possimus dolores expedita sed unde nam!</p>
+    <p id="qwerty">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, iure voluptatum dicta maiores perspiciatis, ab velit vero natus laborum, esse eius illum. Fuga id in ex consectetur perspiciatis iusto excepturi.</p>
     <ul>
-    	<li>1<li>
-    	<li>2<li>
-    	<li>3<li>
-    	<li>4<li>
+    	<li>1</li>
+    	<li>2</li>
+    	<li>3</li>
+    	<li>4</li>
     </ul>
+    <style type="text/css">
+    	#qwerty{
+    		background: #CB12ECFF;
+    		}
+    </style>
 </body>
 </html>
