--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 	<title>Git gut</title>
 </head>
 <body>
-	<h1>аАаАгАоАлАоАвАоАк</h1>
+	<h1>lul</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore tempora laborum, beatae nisi maxime molestiae ad inventore magni sunt excepturi fugiat repellat aliquam, sequi possimus dolores expedita sed unde nam!</p>
-    <p id="qwerty">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, iure voluptatum dicta maiores perspiciatis, ab velit vero natus laborum, esse eius illum. Fuga id in ex consectetur perspiciatis iusto excepturi.</p>
+    <p id="qwerty">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti, iure voluptatum dicta maiores perspiciatis, ab velit vero natus laborum, esse eius illum. Fuga id in ex consectetur perspiciatis iusto excepturi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium vero, itaque dolorum reprehenderit quibusdam nisi, ipsa excepturi ratione reiciendis debitis repellendus, placeat, enim quas tempora illum ipsum. Officia, est, itaque?</p>
     <ul>
     	<li>1</li>
     	<li>2</li>
     	<li>3</li>
-    	<li>5!</li>
+    	<li>6?</li>
     </ul>
     <style type="text/css">
     	#qwerty{
-    		background: #318DCDFF;
+    		background: #ffee00ff;
     		}
     </style>
 </body>
