--- a/jfl.html
+++ b/jfl.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>God, no!</title>
+	<title>Hi</title>
 </head>
 <body>
-	<h1>No u</h1>
-    <p>Help me</p>
-    <p id="qwerty">PLEASE</p>
+	<h1>Everithing is ok</h1>
+    <p>...</p>
+    <p id="qwerty">OKAY</p>
     <ul>
     	<li>Пше</li>
     	<li>Пше пше</li>
@@ -15,7 +15,7 @@
     </ul>
     <style type="text/css">
     	#qwerty{
-    		background: #F20C11FF;
+    		background: #2DD1A0FF;
     		}
     </style>
 </body>
