--- a/jfl.html
+++ b/jfl.html
@@ -4,14 +4,14 @@
 	<title>God, no!</title>
 </head>
 <body>
-	<h1>No u</h1>
+	<h1>Yes me</h1>
     <p>Help me</p>
     <p id="qwerty">PLEASE</p>
     <ul>
-    	<li>Пше</li>
+    	<li>гг</li>
     	<li>Пше пше</li>
     	<li>Пше пше пше</li>
-    	<li>Пше пше пше пше</li>
+    	<li>ПШЕ</li>
     </ul>
     <style type="text/css">
     	#qwerty{
